# aas

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
apps/aas-bar/: .gitignore  Info.plist  Package.swift  README.md  build-app.sh
apps/aas-bar/Sources/AasBar/: AasBarApp.swift  Model.swift  PopoverView.swift
apps/aas-bar/Tests/AasBarTests/: ModelTests.swift
crates/aas-cli/: Cargo.toml
crates/aas-cli/src/: exec.rs  export.rs  login.rs  main.rs  render.rs  ui.rs
crates/aas-core/: Cargo.toml
crates/aas-core/src/: backoff.rs  execargs.rs  jwt.rs  keychain.rs  keyed_lock.rs  lib.rs  model.rs  naming.rs  platform.rs  secure_store.rs  share.rs  store.rs  usage.rs  usage_cache.rs
crates/aas-import/: Cargo.toml
crates/aas-import/src/: lib.rs
crates/aas-providers/: Cargo.toml
crates/aas-providers/src/: claude.rs  codex.rs  common.rs  cursor.rs  key_adapter.rs  lib.rs  pi.rs  snapshot.rs
crates/aas-proxy/: Cargo.toml
crates/aas-proxy/src/: inject.rs  lib.rs  models.rs  retry.rs  server.rs  sse.rs  tests.rs  types.rs
crates/aas-proxy/src/adapters/: claude.rs  codex.rs  grok.rs  mod.rs  util.rs  zai.rs
docs/: DESIGN-aas-bar.md  DESIGN.md  PARITY_SPEC.md
docs/assets/: cli-demo.tape
widgets/barshelf-aas-usage/: README.md  widget.json  workflow.json
widgets/menubucket-aas-usage/: README.md
