[package]
name = "aas-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aas-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
base64.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
